<resources>
    <string name="app_name">Notebook</string>

    <!-- Common -->
    <string name="yes">예</string>
    <string name="no">아니오</string>

    <!-- Exception -->
    <string name="exception_not_found_activity_context">Activity 의 Context가 필요합니다.</string>

    <!-- Permission -->
    <string name="permission_request_camera">카메라 권한이 필요합니다.</string>
    <string name="permission_request_write_external_storage">파일 쓰기 권한이 필요합니다.</string>
    <string name="permission_request_read_external_storage">파일 읽기 권한이 필요합니다.</string>

    <!-- Publish -->
    <string name="msg_publish_okay">이 사진은 모든 사람들과 공유합니다.</string>
    <string name="msg_publish_no">이 사진은 나만 봅니다.</string>
    <string name="msg_publish_error">인터넷 네트워크 상태를 확인해주세요.</string>

    <!-- menu -->
    <string name="menu_group_upload">Upload</string>
    <string name="menu_group_about">About</string>
    <string name="menu_function_camera">Camera</string>
    <string name="menu_function_gallery">Gallery</string>
    <string name="menu_function_about">Credits</string>

    <!-- CardView -->
    <string name="delete">삭제</string>
    <string name="transition_card_popup">card_popup</string>

    <!-- DrawerLayout -->
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_id_test">Android Studio</string>
    <string name="action_settings">Settings</string>

    <!-- View in View -->
    <string name="transition_fab_rotate">fab_rotate</string>

    <!-- Dialog -->
    <string name="dialog_question_logout">로그아웃 하시겠습니까?</string>
    <string name="dialog_question_delete">정말 삭제하시겠습니까?</string>
    <string name="dialog_message_wait">잠시만 기다려 주세요...</string>


</resources>
