<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/menu_group_upload">
            <menu>
                <item
                    android:id="@+id/item_nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_function_camera" />
                <item
                    android:id="@+id/item_nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_function_gallery" />

            </menu>
        </item>

    </group>

    <item android:title="@string/menu_group_about">
        <menu>
            <item
                android:id="@+id/item_nav_credits"
                android:icon="@drawable/baseline_face_24"
                android:title="@string/menu_function_about" />
        </menu>
    </item>

</menu>